# VoiceDraft-1

./: .gitignore  README.md  app.py  app_native.py  build_app.sh  config.py  gemini_client.py  injector.py  main.py  main_native.py  native_statusbar.py  native_window.py  pyproject.toml  recorder.py  requirements.txt  setup.py  whisper_client.py
ui/: floating_window.py
