[project]
name = "voice-draft"
version = "0.1.0"
description = "macOS 常駐型音声入力アシスタント (YK Fork)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "customtkinter>=5.2.2",
    "google-genai>=1.64.0",
    "keyboard>=0.13.5",
    "numpy>=2.4.2",
    "openai-whisper>=20240930",
    "pyperclip>=1.11.0",
    "python-dotenv>=1.2.1",
    "sounddevice>=0.5.5",
    "soundfile>=0.13.1",
]

[project.scripts]
voice-draft = "main:main"
